# chatgpt-cli

./: Cargo.toml  LICENSE  README.md  build-and-install.sh
src/: main.rs
