[package]
edition = "2021"
name = "chatgpt"
version = "0.1.0"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2"
dotenv = "0.15.0"
futures-util = "0.3"
reqwest = {version = "0.11", features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.28", features = ["full"]}
